fixed spacing of elements

--- a/css/style.css
+++ b/css/style.css
@@ -1145,7 +1145,7 @@ div.cd-project-info img{
   font-size: 2rem;
   font-weight: bold;
   text-transform: uppercase;
-  margin-top: 1.7em;
+  margin-top: 1.5rem;
 
 }
 
@@ -1163,7 +1163,7 @@ div.cd-project-info img{
 .cd-project-info p {
   width: 90%;
   max-width: 960px;
-  margin: 0 auto;
+  margin: 1em auto;
   line-height: 2;
   font-size: 2rem;
 }
